@@ -107,6 +107,9 @@
 		0FE5E3550D95D7470021A644 /* IsDictionaryContainingKeyTest.m in Sources */ = {isa = PBXBuildFile; fileRef = 0FE5E3540D95D7470021A644 /* IsDictionaryContainingKeyTest.m */; };
 		0FE5E35A0D95D7A50021A644 /* HCIsDictionaryContainingKey.h in Headers */ = {isa = PBXBuildFile; fileRef = 0FE5E3580D95D7A50021A644 /* HCIsDictionaryContainingKey.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		0FE5E35B0D95D7A50021A644 /* HCIsDictionaryContainingKey.mm in Sources */ = {isa = PBXBuildFile; fileRef = 0FE5E3590D95D7A50021A644 /* HCIsDictionaryContainingKey.mm */; };
+		0FF1B1E21086DFDA00E615AE /* HCInvocationMatcher.h in Headers */ = {isa = PBXBuildFile; fileRef = 0FF1B1E01086DFDA00E615AE /* HCInvocationMatcher.h */; settings = {ATTRIBUTES = (Public, ); }; };
+		0FF1B1E31086DFDA00E615AE /* HCInvocationMatcher.mm in Sources */ = {isa = PBXBuildFile; fileRef = 0FF1B1E11086DFDA00E615AE /* HCInvocationMatcher.mm */; };
+		0FF1B2041086E55100E615AE /* InvocationMatcherTest.m in Sources */ = {isa = PBXBuildFile; fileRef = 0FF1B2031086E55100E615AE /* InvocationMatcherTest.m */; };
 /* End PBXBuildFile section */
 
 /* Begin PBXContainerItemProxy section */
@@ -222,6 +225,9 @@
 		0FE5E3540D95D7470021A644 /* IsDictionaryContainingKeyTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = IsDictionaryContainingKeyTest.m; sourceTree = "<group>"; };
 		0FE5E3580D95D7A50021A644 /* HCIsDictionaryContainingKey.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = HCIsDictionaryContainingKey.h; sourceTree = "<group>"; };
 		0FE5E3590D95D7A50021A644 /* HCIsDictionaryContainingKey.mm */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.objcpp; path = HCIsDictionaryContainingKey.mm; sourceTree = "<group>"; };
+		0FF1B1E01086DFDA00E615AE /* HCInvocationMatcher.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = HCInvocationMatcher.h; sourceTree = "<group>"; };
+		0FF1B1E11086DFDA00E615AE /* HCInvocationMatcher.mm */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.objcpp; path = HCInvocationMatcher.mm; sourceTree = "<group>"; };
+		0FF1B2031086E55100E615AE /* InvocationMatcherTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = InvocationMatcherTest.m; sourceTree = "<group>"; };
 		32DBCF5E0370ADEE00C91783 /* OCHamcrest_Prefix.pch */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = OCHamcrest_Prefix.pch; sourceTree = "<group>"; };
 		8DC2EF5A0486A6940098B216 /* Info.plist */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.plist.xml; path = Info.plist; sourceTree = "<group>"; };
 		8DC2EF5B0486A6940098B216 /* OCHamcrest.framework */ = {isa = PBXFileReference; explicitFileType = wrapper.framework; includeInIndex = 0; path = OCHamcrest.framework; sourceTree = BUILT_PRODUCTS_DIR; };
@@ -306,6 +312,8 @@
 				0F2A4AD00D8B493600051BCF /* HCBaseMatcher.h */,
 				0F2A4AD10D8B493600051BCF /* HCBaseMatcher.mm */,
 				0F2A4AD20D8B493600051BCF /* HCDescription.h */,
+				0FF1B1E01086DFDA00E615AE /* HCInvocationMatcher.h */,
+				0FF1B1E11086DFDA00E615AE /* HCInvocationMatcher.mm */,
 				0F2A4AD30D8B493600051BCF /* HCMatcher.h */,
 				0F2A4AD40D8B493600051BCF /* HCMatcherAssert.h */,
 				0F2A4AD50D8B493600051BCF /* HCMatcherAssert.mm */,
@@ -350,6 +358,7 @@
 				0F2A4B380D8B69E100051BCF /* AbstractMatcherTest.h */,
 				0F2A4B390D8B69E100051BCF /* AbstractMatcherTest.m */,
 				0F2A4B2C0D8B69E100051BCF /* BaseMatcherTest.m */,
+				0FF1B2031086E55100E615AE /* InvocationMatcherTest.m */,
 				0F0A12E40DA0A35F00AE4705 /* MatcherAssertTest.m */,
 				0F2A4CD80D8C7FC800051BCF /* Collection */,
 				0F2A4B2D0D8B69E100051BCF /* Core */,
@@ -564,6 +573,7 @@
 				0FA913DD0DA0999E000AC3AA /* OCHamcrest.h in Headers */,
 				0FDC10A20F2A429B00DD41AA /* HCCollectMatchers.h in Headers */,
 				0F68C6201003101A00E3DCBE /* HCIntegerTypes.h in Headers */,
+				0FF1B1E21086DFDA00E615AE /* HCInvocationMatcher.h in Headers */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -693,6 +703,7 @@
 				0FA912720DA05238000AC3AA /* IsEqualIgnoringCaseTest.m in Sources */,
 				0FA913000DA06477000AC3AA /* IsEqualIgnoringWhiteSpaceTest.m in Sources */,
 				0F0A12E50DA0A35F00AE4705 /* MatcherAssertTest.m in Sources */,
+				0FF1B2041086E55100E615AE /* InvocationMatcherTest.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -732,6 +743,7 @@
 				0FA912790DA052AD000AC3AA /* HCIsEqualIgnoringCase.mm in Sources */,
 				0FA913090DA064CF000AC3AA /* HCIsEqualIgnoringWhiteSpace.mm in Sources */,
 				0FDC10A30F2A429B00DD41AA /* HCCollectMatchers.mm in Sources */,
+				0FF1B1E31086DFDA00E615AE /* HCInvocationMatcher.mm in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
